[tool.poetry.scripts]
pymd2html = "pymd2html"

[tool.poetry]
name = "pymd2html"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Bae Sung Hoon <dan990429@gmail.com>"]
[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
